--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -17,7 +17,8 @@
   font-size: 24px;
   font-weight: 700;
   color: #f2f2f2;
-  padding-left: 10px;
+  /* padding-left: 10px; */
+  text-align: center;
   margin: 0;
 }
 
