--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -5,7 +5,7 @@
   align-items: center;
 
   margin: 0 0 30px;
-  background-color: #00acb0;
+  background-color: #e36414;
   overflow: hidden;
 }
 
@@ -14,18 +14,14 @@
 }
 
 .nav-title {
-  font-size: 24px;
-  font-weight: 700;
-  color: #f2f2f2;
-  /* padding-left: 10px; */
-  text-align: center;
-  margin: 0;
+ text-align: center;
+ color: #f2f2f2;
 }
 
 .navLink {
   display: inline-block;
   color: #f2f2f2;
-  background-color: #00acb0;
+  background-color: #e36414;
   text-align: center;
   padding: 24px 10px;
   text-decoration: none;
@@ -39,5 +35,5 @@
 }
 
 .navLink:hover {
-  background-color: #008183;
+  background-color: #e36414;
 }
