template road is showing up, get request is working

--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -13,6 +13,12 @@ Grid
   align-items: flex-start;
 }
 
+.webpage {
+  display:flex;
+  height: 100vh;
+  background-color: black;
+};
+
 .grid-col {
   flex: 0 0 auto;
   padding: 0 0.5rem 0.5rem;
