trouble shooting issue causing images to not display

--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -13,11 +13,10 @@ Grid
   align-items: flex-start;
 }
 
-.webpage {
-  display:flex;
-  height: 100vh;
-  background-color: black;
-};
+/* .routes {
+  display : flex;
+  flex-wrap: wrap;
+} */
 
 .grid-col {
   flex: 0 0 auto;
