--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -8,7 +8,7 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin: 0;
   padding: 0;
-  background-color:  #cdc0b7;
+  background-color:  #cb661e;
   background-image:url('background-image.jpg');
   background-size: cover;
   background-repeat: no-repeat;
@@ -91,7 +91,7 @@ Alert
   padding: 15px 10px;
   margin: 15px 0;
   border: 2px solid #e01616;
-  background-color: #efefef;
+  background-color: #856363;
   border-radius: 3px;
   color: #e01616;
   font-size: 0.8rem;
