--- a/src/components/AddRoute/AddRoute.css
+++ b/src/components/AddRoute/AddRoute.css
@@ -1,6 +1,3 @@
-/* .form {
-color: black;
-} */
 
 .form {
     color:black;
@@ -18,7 +15,7 @@ color: black;
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(0, 0, 0, 0.4);
     z-index: 1000;
   }
   
@@ -30,6 +27,7 @@ color: black;
     padding: 20px;
     background-color: white;
     border-radius: 10px;
+    opacity: 75%;
   }
   
   
