--- a/src/components/UserPage/UserPage.css
+++ b/src/components/UserPage/UserPage.css
@@ -1,3 +1,33 @@
-.paper {
+/* .paper {
     opacity: 20%;
-}
+} */
+
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+  
+  .card {
+    width: auto;
+    margin: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease;
+    background-color: rgba(255, 255, 255, 0.8); /* Adjust the alpha (opacity) value as needed */
+  
+    &:hover {
+      transform: scale(1.05);
+    }
+  }
+  
+  .card img {
+    width: auto;
+    height: auto;
+  }
+  
+  @media (max-width: 600px) {
+    .container {
+      justify-content: center;
+    }
+  }
+  
