--- a/src/components/UserPage/UserPage.css
+++ b/src/components/UserPage/UserPage.css
@@ -1,7 +1,3 @@
-/* .paper {
-    opacity: 20%;
-} */
-
 .container {
     display: flex;
     flex-wrap: wrap;
@@ -13,7 +9,7 @@
     margin: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease;
-    background-color: rgba(255, 255, 255, 0.8); /* Adjust the alpha (opacity) value as needed */
+    background-color: rgba(255, 255, 255, 0.8); 
   
     &:hover {
       transform: scale(1.05);
@@ -23,6 +19,7 @@
   .card img {
     width: auto;
     height: auto;
+    border-radius: 10px;
   }
   
   @media (max-width: 600px) {
@@ -30,4 +27,74 @@
       justify-content: center;
     }
   }
+  
+  .postButton {
+display: block;
+margin: 0 auto;
+  }
+
+  
+/* 
+  .postButton {
+    display: block;
+    margin: 0 auto;
+  }
+  
+  .container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+  
+  .card {
+    margin: 10px;
+    padding: 20px;
+    max-width: 400px; 
+  }
+  
+  .routeItem {
+    text-align: center;
+  }
+  
+  .CardButtons {
+    text-align: center;
+  } */
+
+
+
+
+
+  /* UserPage.css */
+
+/* .postButton {
+    display: block;
+    margin: 0 auto;
+  }
+  
+  .container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+  
+  .card {
+    margin: 10px;
+    padding: 20px;
+    max-width: 300px; 
+  }
+  
+  .routeItem {
+    text-align: center;
+  }
+  
+  .CardButtons {
+    text-align: center;
+  }
+  
+  @media screen and (max-width: 600px) {
+    .container {
+      flex-direction: column;
+      align-items: center;
+    }
+  } */
   
