--- a/src/components/UserPage/UserPage.css
+++ b/src/components/UserPage/UserPage.css
@@ -1,15 +1,17 @@
 .container {
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content:center;
   }
+
   
   .card {
     width: auto;
-    margin: 10px;
+    margin: 30px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease;
-    background-color: rgba(255, 255, 255, 0.8); 
+    background-color: rgba(255, 255, 255, 0.7);
   
     &:hover {
       transform: scale(1.05);
@@ -33,68 +35,4 @@ display: block;
 margin: 0 auto;
   }
 
-  
-/* 
-  .postButton {
-    display: block;
-    margin: 0 auto;
-  }
-  
-  .container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-  }
-  
-  .card {
-    margin: 10px;
-    padding: 20px;
-    max-width: 400px; 
-  }
-  
-  .routeItem {
-    text-align: center;
-  }
-  
-  .CardButtons {
-    text-align: center;
-  } */
-
-
-
-
-
-  /* UserPage.css */
-
-/* .postButton {
-    display: block;
-    margin: 0 auto;
-  }
-  
-  .container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-  }
-  
-  .card {
-    margin: 10px;
-    padding: 20px;
-    max-width: 300px; 
-  }
-  
-  .routeItem {
-    text-align: center;
-  }
-  
-  .CardButtons {
-    text-align: center;
-  }
-  
-  @media screen and (max-width: 600px) {
-    .container {
-      flex-direction: column;
-      align-items: center;
-    }
-  } */
   
